@@ -37,7 +37,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.8.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.9.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
     </dependency>
 
     <dependency>
@@ -134,6 +134,8 @@
               <argLine>
                 --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                 --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+
+                --add-reads com.azure.core.test=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
